k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-gin-app
  labels:
    app.kubernetes.io/managed-by: udap
